--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
         "xstring": "cpp",
         "xtree": "cpp",
         "xutility": "cpp",
-        "*.tpp": "cpp"
+        "*.tpp": "cpp",
+        "xmemory": "cpp",
+        "memory": "cpp"
     }
 }
